<resources>
    <string name="app_name">APICalling</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_title_description">To get started please create your Insight Quanta Profile</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_genius_practitioner">Genius Practitioner</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_password">Password</string>
    <string name="str_email">Email</string>
</resources>